# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  .gitmodules  .heimeignore  .latexmkrc  .spacemacs.d  Justfile  LICENSE  Makefile  README.md  README.org  TODO.org  arch.md  aspell.nix  bootstrap  brew  bspwmrc  com.googlecode.iterm2.plist  config.dot  config.fish  config.yaml  configuration.nix  dot_gitconfig  dot_gitconfig.tmpl  dot_ideavimrc  dot_latexmkrc  dot_npmrc  dotfiles.sh  early-init.el  emacs.el  emacs.nix  emacs.org  git.org  gitconfig  gitconfig.dot  ideavimrc  import_map.json  init.el  init.org  (+37 more)
.emacs.d/: init.el  init.org
base/: base-checking.el  base-completion.el  base-editor.el  base-evil.el  base-git.el  base-help.el  base-projectile.el  base-search.el  base-ui.el  base-window.el  base.el
colors/: base16-solarized.dark.dvtcolortheme  screen-256color.ti
config/: 1password.task.lua  audio.nix  bat.task.lua  boot.nix  common.nix  default.nix  desktop.nix  direnv.task.lua  gaming.nix  git.nix  jetbrains.task.fnl  jetbrains.task.lua  latex.task.fnl  latex.task.lua  mpv.nix  nix.nix  node.task.fnl  node.task.lua  paru.task.lua  pi.task.lua  pkgs.nix  rust.task.lua  social.nix  starship.task.lua  terminal.nix  user.nix  variables.nix  vgaswitcheroo.nix  workstation.nix
config/home/desktop/taffybar/: .gitignore  MyTaffybar.hs  default.nix  mytaffybar.cabal  shell.nix  taffybar.hs
configuration/: module-list.nix
core/: core-editor.el  core-keybindings.el  core-os.el  core-packages.el  core-ui.el  core.el
dot_cargo/: config
dot_config/: libinput-gestures.conf
emacs/: .gitignore  README.org  default.nix  early-init.el  emacs.nix  init.el
emacs.d/: Cask  custom.el  emacs-init.el  emacs-init.org  init-old.el  init.el  init.html  init.org  places
home/: common.nix  default.nix  desktop.nix  direnv.nix  gaming.nix  git.nix  gnupg.nix  jetbrains.nix  kitty.conf  latex.nix  neovim.nix  programming.nix  social.nix  terminal.nix  test.task.py  test.task.ts  vscode.json  vscode.nix
home/desktop/taffybar/: mytaffybar.cabal  shell.nix  taffybar.hs
home/desktop/xmobar/: .gitignore  default.nix  shell.nix  xmobar.cabal  xmobar.hs
home/desktop/xmonad/: .gitignore  default.nix  myxmonad.cabal  release.nix  shell.nix  xmonad.hs
lib/: cli.ts  context.ts  default.nix  execute.nix  fs.ts  group.ts  mod.ts  shell.ts  shell_test.ts  status.ts  symlink.nix  task.ts
machines/: jupiter-home.nix  jupiter.nix  (+4 more)
(+425 files in other folders)
