name:          mytaffybar
version:       0.1.0.0
author:        Sondre Nilsen
maintainer:    nilsen.sondre@gmail.com
build-type:    Simple
cabal-version: >= 2.0

executable mytaffybar
  main-is:          taffybar.hs
  hs-source-dirs:   .
  build-depends:    base ^>= 4.12.0.0, X11, containers, taffybar, xmonad-contrib >= 0.15
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
