name:          myxmonad
version:       0.1.0.0
author:        Sondre Nilsen
maintainer:    nilsen.sondre@gmail.com
build-type:    Simple
cabal-version: >= 2.0

executable myxmonad
  main-is:          xmonad.hs
  hs-source-dirs:   ., lib
  build-depends:    base           ^>= 4.12.0.0
                  , X11
                  , containers
                  , taffybar
                  , xmonad         >= 0.15
                  , xmonad-contrib >= 0.15
                  , dbus
                  , utf8-string
  default-language: Haskell2010
  ghc-options:      -O2 -threaded
